form and styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -203,61 +203,71 @@
         </section>
     </main>
     <!-- Контакты -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-information">
-                <div class="footer-address">
-                    <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part">Studio</span></a>
-                    <address class="contact-address">
-                        <ul class="contact-address-list list">
-                            <li class="contact-address-item">
-                                <a href="" class="contact-address-map link">г. Киев, пр-т Леси Украинки, 26</a>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-information">
+                    <div class="footer-address">
+                        <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part">Studio</span></a>
+                        <address class="contact-address">
+                            <ul class="contact-address-list list">
+                                <li class="contact-address-item">
+                                    <a href="" class="contact-address-map link">г. Киев, пр-т Леси Украинки, 26</a>
+                                </li>
+                                <li class="contact-address-item">
+                                    <a href="mailto:info@example.com" class="contact-address-mail link">info@example.com</a>
+                                </li>
+                                <li class="contact-address-item">
+                                    <a href="tel:+380991111111" class="contact-address-tel link">+38 099 111 11 11</a>
+                                </li>
+                            </ul>
+                    </div>
+                    </address>
+                    <div class="footer-title-icon">
+                        <b class="footer-title">присоединяйтесь</b>
+                        <ul class="footer-socials list footer-socials-list">
+                            <li class="footer-socials-item link">
+                                <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
+                                    <svg class="footer-socials-icon" width="20" height="20">socials
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="contact-address-item">
-                                <a href="mailto:info@example.com" class="contact-address-mail link">info@example.com</a>
+                            <li class="footer-socials-item link">
+                                <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
+                                    <svg class="footer-socials-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="contact-address-item">
-                                <a href="tel:+380991111111" class="contact-address-tel link">+38 099 111 11 11</a>
+                            <li class="footer-socials-item link">
+                                <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
+                                    <svg class="footer-socials-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-socials-item link" rel="noopener noreferrer nofollow" target="_blank">
+                                <a href="" class="footer-socials-link">
+                                    <svg class="footer-socials-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
-                </div>
-                </address>
-                <div class="footer-title-icon">
-                    <h3 class="footer-title">присоединяйтесь</h3>
-                    <ul class="footer-socials list footer-socials-list">
-                        <li class="footer-socials-item link">
-                            <a href="" class="footer-socials-link">
-                                <svg class="footer-socials-icon" width="20" height="20">socials
-                                    <use href="./images/icons.svg#icon-instagram"></use>
+                    </div>
+                    <div class="footer-title-subscription-block">
+                        <b class="footer-title-subscription">Подпишитесь на рассылку </b>
+                        <form action="#" class="subscription-form">
+                            <input type="email" name="online-email" placeholder="E-mail" class="online-input" required>
+                            <button type="submit" class="btn subscription-btn">Подписаться&nbsp;
+                                <svg class="footer-subscription-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-icon-send-color"></use>
                                 </svg>
-                            </a>
-                        </li>
-                        <li class="footer-socials-item link">
-                            <a href="" class="footer-socials-link">
-                                <svg class="footer-socials-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="footer-socials-item link">
-                            <a href="" class="footer-socials-link">
-                                <svg class="footer-socials-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="footer-socials-item link">
-                            <a href="" class="footer-socials-link">
-                                <svg class="footer-socials-icon" width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                            </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
