--- a/index.html
+++ b/index.html
@@ -401,16 +401,15 @@
                     </ul>
                 </div>
                 <div class="footer-title-subscription-block">
-                <b class="footer-title-subscription">Подпишитесь на рассылку </b>
-                <form action="#" class="subscription-form">
-                    <input type="email" name="online-email" placeholder="E-mail" class="online-input small">
-                    <button type="submit" class="btn subscription-btn">Подписаться
-                        <svg class="footer-subscription-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-icon-send-color"></use>
-                        </svg>
-                    </button>
-                 </div>
-
+                    <b class="footer-title-subscription">Подпишитесь на рассылку </b>
+                    <form action="#" class="subscription-form">
+                        <input type="email" name="online-email" placeholder="E-mail" class="online-input">
+                        <button type="submit" class="btn subscription-btn">Подписаться&nbsp;
+                            <svg class="footer-subscription-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-icon-send-color"></use>
+                            </svg>
+                        </button>
+                </div>
             </div>
         </div>
     </footer>
@@ -421,52 +420,48 @@
                     <use href="./images/icons.svg#icon-cross"></use>
                 </svg>
             </button>
-          
-        <form action="#" class="modal-form">
-            <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
-            <div class="modal-form-field">
-                <label for="input-name" class="modal-form-label">Имя</label>
-                <span class="input-wrap">
-                    <input type="text" id="input-name" class="modal-form-input" placeholder=" " name="modal-name">
-                    <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-person-black"></use>
-                    </svg>
-                </span>
-            </div>
-            <div class="modal-form-field">
-                <label for="input-tel" class="modal-form-label">Телефон</label>
-                <span class="input-wrap">
-                    <input type="tel" id="input-tel" class="modal-form-input" placeholder=" " name="modal-name">
-                    <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-phone-black"></use>
-                    </svg>
-                </span>
-            </div>
-            <div class="modal-form-field">
-                <label for="input-email" class="modal-form-label">Почта</label>
-                <span class="input-wrap">
-                    <input type="email" id="input-email" class="modal-form-input" placeholder=" " name="modal-name">
-                    <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-email-black"></use>
-                    </svg>
-                </span>
-            </div>
-            <div class="modal-form-field">
-                <label for="comment" class="modal-form-label">Комментарий</label>
-                <textarea name="modal-comment" id="comment" placeholder="Введите текст" class="modal-comment"></textarea>
-            </div>
-            <div class="modal-form-field">
-                <input type="checkbox" id="check" name="policy" class="visually-hidden checkbox">
-                <label for="check" class="check-label">
-                    <span class="icon-check">
-                        <svg class="" width="16" height="15">
-                            <use href="./images/icons.svg#icon-Vector-color"></use>
+            <form action="#" class="modal-form">
+                <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+                <label class="modal-form-label">
+                    Имя
+                    <span class="modal-form-field">
+                        <input type="text" name="name" class="modal-form-input" name="modal-name" minlength="2"
+                            required>
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
-                    </span class="text-check">
-                    Соглашаюсь с рассылкой и принимаю <a href="" class="form-link link">Условия договора</a></label>
-            </div>
-            <button type="submit" class="btn form-btn">Oтправить</button>
+                    </span>
+                </label>
+                <label class="modal-form-label">
+                    Телефон
+                    <span class="modal-form-field">
+                        <input type="tel" name="name" class="modal-form-input" name="modal-tel"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="067-000-00-00" required>
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </span>
+                </label>
+
+                <label class="modal-form-label">
+                    Почта
+                    <span class="modal-form-field">
+                        <input type="email" name="name" class="modal-form-input" name="modal-email">
+                        <svg class="modal-form-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-form-label">
+                    Комментарий
+                    <textarea name="modal-message" class="modal-form-message" placeholder="Введите текст"></textarea>
+                </label>
+                <input type="checkbox" class="modal-form-checkbox visually-hidden" id="accept-policy">
+                <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;<a
+                        href="" class="modal-form-label-link">Условия договора</a> </label>
+                <button type="submit" class="modal-form-btn">Отправить</button>
             </form>
+
         </div>
     </div>
 
