--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Герой -->
     <main>
         <section class="hero">
-            <div class="container"></div>
+            <div class="container">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
             </div>
@@ -66,7 +66,7 @@
                 <ul class="peculiarities-list list">
                     <li class="peculiarities-item">
                         <div class="peculiarities-fone-img">
-                            <svg class="peculiarities-icon" width="65" height="70">socials
+                            <svg class="peculiarities-icon" width="65" height="70">
                                 <use href="./images/icons.svg#icon-antena"></use>
                             </svg>
                         </div>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="peculiarities-item">
                         <div class="peculiarities-fone-img">
-                            <svg class="peculiarities-icon" width="67" height="70">socials
+                            <svg class="peculiarities-icon" width="67" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -86,7 +86,7 @@
                     </li>
                     <li class="peculiarities-item">
                         <div class="peculiarities-fone-img">
-                            <svg class="peculiarities-icon" width="70" height="70">socials
+                            <svg class="peculiarities-icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -96,7 +96,7 @@
                     </li>
                     <li class="peculiarities-item">
                         <div class="peculiarities-fone-img">
-                            <svg class="peculiarities-icon" width="70" height="70">socials
+                            <svg class="peculiarities-icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -150,7 +150,7 @@
                             <ul class="team-socials list socials-list">
                                 <li class="socials-item link">
                                     <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
-                                        <svg class="socials-icon" width="20" height="20">socials
+                                        <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -188,7 +188,7 @@
                             <ul class="team-socials list socials-list">
                                 <li class="socials-item link">
                                     <a href="" class="socials-link">
-                                        <svg class="socials-icon" width="20" height="20">socials
+                                        <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -207,8 +207,8 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="socials-item link" rel="noopener noreferrer nofollow" target="_blank">
-                                    <a href="" class="socials-link">
+                                <li class="socials-item link" >
+                                    <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                         <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -226,7 +226,7 @@
                             <ul class="team-socials list socials-list">
                                 <li class="socials-item link">
                                     <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
-                                        <svg class="socials-icon" width="20" height="20">socials
+                                        <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -238,15 +238,15 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="socials-item link" rel="noopener noreferrer nofollow" target="_blank">
-                                    <a href="" class="socials-link">
+                                <li class="socials-item link" >
+                                    <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                         <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="socials-item link" rel="noopener noreferrer nofollow" target="_blank">
-                                    <a href="" class="socials-link">
+                                <li class="socials-item link">
+                                    <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                         <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -264,7 +264,7 @@
                             <ul class="team-socials list socials-list">
                                 <li class="socials-item link">
                                     <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
-                                        <svg class="socials-icon" width="20" height="20">socials
+                                        <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -365,14 +365,14 @@
                                 <a href="tel:+380991111111" class="contact-address-tel link">+38 099 111 11 11</a>
                             </li>
                         </ul>
+                    </address>
                 </div>
-                </address>
                 <div class="footer-title-icon">
                     <b class="footer-title">присоединяйтесь</b>
                     <ul class="footer-socials list footer-socials-list">
                         <li class="footer-socials-item link">
                             <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
-                                <svg class="footer-socials-icon" width="20" height="20">socials
+                                <svg class="footer-socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
@@ -391,8 +391,8 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-socials-item link" rel="noopener noreferrer nofollow" target="_blank">
-                            <a href="" class="footer-socials-link">
+                        <li class="footer-socials-item link">
+                            <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                 <svg class="footer-socials-icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -409,6 +409,7 @@
                                 <use href="./images/icons.svg#icon-icon-send-color"></use>
                             </svg>
                         </button>
+                   </form>
                 </div>
             </div>
         </div>
@@ -425,7 +426,7 @@
                 <label class="modal-form-label">
                     Имя
                     <span class="modal-form-field">
-                        <input type="text" name="name" class="modal-form-input" name="modal-name" minlength="2"
+                        <input type="text" class="modal-form-input" name="modal-name" minlength="2"
                             required>
                         <svg class="modal-form-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person-black"></use>
@@ -435,7 +436,7 @@
                 <label class="modal-form-label">
                     Телефон
                     <span class="modal-form-field">
-                        <input type="tel" name="name" class="modal-form-input" name="modal-tel"
+                        <input type="tel" class="modal-form-input" name="modal-tel"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="067-000-00-00" required>
                         <svg class="modal-form-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone-black"></use>
@@ -445,7 +446,7 @@
                 <label class="modal-form-label">
                     Почта
                     <span class="modal-form-field">
-                        <input type="email" name="name" class="modal-form-input" name="modal-email">
+                        <input type="email" class="modal-form-input" name="modal-email">
                         <svg class="modal-form-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
