--- a/portfolio.html
+++ b/portfolio.html
@@ -65,9 +65,10 @@
                 </ul>
                 <ul class="projects-list list">
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/computer.jpg"
-                                    alt="Фото людей на экране" class="projects-foto" width="370" height="294">
+                           <img src="./images/portfolio/computer.jpg" alt="Фото людей на экране" class="projects-foto" width="370"
+                                    height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -79,9 +80,10 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/orlean.jpg"
-                                    alt="Спортсмены играют в баскетбол" class="projects-foto" width="370" height="294">
+                                <img src="./images/portfolio/orlean.jpg" alt="Спортсмены играют в баскетбол" class="projects-foto"
+                                    width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
                                     для цифрового
@@ -94,8 +96,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/seafood.jpg"
+                                <img src="./images/portfolio/seafood.jpg"
                                     alt="Постер с названием" class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -109,8 +112,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/prime.jpg" alt="Наушники"
+                                <img src="./images/portfolio/prime.jpg" alt="Наушники"
                                     class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -124,8 +128,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/box.jpg"
+                                <img src="./images/portfolio/box.jpg"
                                     alt="Картонные коробки" class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -135,12 +140,13 @@
                         <div class="projects-card">
                             <h2 class="projects-title">Проект <span lang="en">Boxes</span></h2>
                             <p class="projects-text">Приложение</p>
-                            </a>
-                        </div>
+                         </div>
+                        </a>
                     </li>
                     <li class="projects-item">
+                        <a href="" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/borders.jpg" alt=""
+                                <img src="./images/portfolio/borders.jpg" alt=""
                                     width="370" class="projects-foto" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -154,8 +160,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/dis.jpg"
+                                <img src="./images/portfolio/dis.jpg"
                                     alt="Женнский журнал" class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -169,8 +176,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/lab.jpg"
+                                <img src="./images/portfolio/lab.jpg"
                                     alt="Бирка на веревке" class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -184,8 +192,9 @@
                         </a>
                     </li>
                     <li class="projects-item">
+                        <a href="#" class="projects-link link">
                         <div class="card-overlay">
-                            <a href="" class="projects-link link"><img src="./images/portfolio/growing.jpg"
+                               <img src="./images/portfolio/growing.jpg"
                                     alt="Человек печатает на ноутбуке" class="projects-foto" width="370" height="294">
                                 <p class="overlay">Технокряк это современная площадка распространения коронавируса.
                                     Компании используют эту платформу
@@ -220,14 +229,14 @@
                                     <a href="tel:+380991111111" class="contact-address-tel link">+38 099 111 11 11</a>
                                 </li>
                             </ul>
+                        </address>
                     </div>
-                    </address>
                     <div class="footer-title-icon">
                         <b class="footer-title">присоединяйтесь</b>
                         <ul class="footer-socials list footer-socials-list">
                             <li class="footer-socials-item link">
                                 <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
-                                    <svg class="footer-socials-icon" width="20" height="20">socials
+                                    <svg class="footer-socials-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
@@ -246,8 +255,8 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li class="footer-socials-item link" rel="noopener noreferrer nofollow" target="_blank">
-                                <a href="" class="footer-socials-link">
+                            <li class="footer-socials-item link">
+                                <a href="" class="footer-socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                     <svg class="footer-socials-icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -258,12 +267,13 @@
                     <div class="footer-title-subscription-block">
                         <b class="footer-title-subscription">Подпишитесь на рассылку </b>
                         <form action="#" class="subscription-form">
-                            <input type="email" name="online-email" placeholder="E-mail" class="online-input" required>
+                            <input type="email" name="online-email" placeholder="E-mail" class="online-input">
                             <button type="submit" class="btn subscription-btn">Подписаться&nbsp;
                                 <svg class="footer-subscription-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-icon-send-color"></use>
                                 </svg>
                             </button>
+                        </form>
                     </div>
                 </div>
             </div>
