--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <section class="client">
             <div class="container">
                 <h2 class="client-main-title">Постоянные клиенты</h2>
-                <ul class="client-list list client-list">
+                <ul class="client-list list">
                     <li class="client-item link">
                         <a href="" class="client-link">
                             <svg class="client-logo" width="41" height="47">
