--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <main>
         <section class="hero">
             <div class="container">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
+                <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+                <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!-- Особенности -->
@@ -207,7 +207,7 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="socials-item link" >
+                                <li class="socials-item link">
                                     <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                         <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
@@ -238,7 +238,7 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="socials-item link" >
+                                <li class="socials-item link">
                                     <a href="" class="socials-link" rel="noopener noreferrer nofollow" target="_blank">
                                         <svg class="socials-icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
@@ -409,7 +409,7 @@
                                 <use href="./images/icons.svg#icon-icon-send-color"></use>
                             </svg>
                         </button>
-                   </form>
+                    </form>
                 </div>
             </div>
         </div>
@@ -426,8 +426,7 @@
                 <label class="modal-form-label">
                     Имя
                     <span class="modal-form-field">
-                        <input type="text" class="modal-form-input" name="modal-name" minlength="2"
-                            required>
+                        <input type="text" class="modal-form-input" name="modal-name" minlength="2" required>
                         <svg class="modal-form-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
